@@ -8,7 +8,7 @@
  * See the file "COPYING" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * @(#) $Id: smi.h,v 1.30 1999/06/02 21:35:43 strauss Exp $
+ * @(#) $Id: smi.h,v 1.31 1999/06/03 20:37:26 strauss Exp $
  */
 
 #ifndef _SMI_H
@@ -274,7 +274,7 @@ extern char *smiDescriptor(char *fullname);
 
 
 
-extern void smiInit();
+extern int smiInit();
 
 extern void smiSetErrorLevel(int level);
 
